examples/test/testpolicy346.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy346
  namespace: namespace309
spec:
  podSelector:
    matchLabels:
      key39: value19
      key40: value35
      key46: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value9
      podSelector:
        matchLabels:
          key22: value10
          key31: value1
